--- a/crates/tor-basic-utils/Cargo.toml
+++ b/crates/tor-basic-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tor-basic-utils"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
 edition = "2021"
 rust-version = "1.56"
@@ -15,10 +15,12 @@ repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
 [dependencies]
 futures = "0.3.14"
 hex = "0.4"
+paste = "1"
 pin-project = "1"
 postage = { version = "0.5.0", default-features = false, features = ["futures-traits"] }
 rand = "0.8"
 rand_chacha = "0.3"
+slab = "0.4.4"
 thiserror = "1"
 void = "1"
 
