--- a/crates/tor-guardmgr/Cargo.toml
+++ b/crates/tor-guardmgr/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tor-guardmgr"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["The Tor Project, Inc.", "Nick Mathewson <nickm@torproject.org>"]
 edition = "2021"
 rust-version = "1.56"
@@ -13,6 +13,15 @@ repository = "https://gitlab.torproject.org/tpo/core/arti.git/"
 
 [features]
 default = []
+
+experimental = ["bridge-client"]
+
+# Support for using bridges as a client. Note that this is not the same as
+# the pt-client feature, since here we are not concerned with
+# pluggable transports necessarily.
+bridge-client = ["tor-netdoc/routerdesc"]
+# Support for pluggable transports.
+pt-client = ["bridge-client", "tor-linkspec/pt-client"]
 
 # Enable testing-only APIs.  APIs under this feature are not
 # covered by semver.
@@ -36,23 +45,23 @@ thiserror = "1"
 tor-basic-utils = { path = "../tor-basic-utils", version = "0.4.0" }
 tor-config = { path = "../tor-config", version = "0.6.0" }
 tor-error = { path = "../tor-error", version = "0.3.2" }
-tor-linkspec = { path = "../tor-linkspec", version = "0.5.0" }
-tor-llcrypto = { path = "../tor-llcrypto", version = "0.3.4" }
+tor-linkspec = { path = "../tor-linkspec", version = "0.5.1" }
+tor-llcrypto = { path = "../tor-llcrypto", version = "0.3.5" }
 tor-netdir = { path = "../tor-netdir", version = "0.6.0" }
-tor-netdoc = { path = "../tor-netdoc", version = "0.5.1" }                               # for address pattern
+tor-netdoc = { path = "../tor-netdoc", version = "0.5.2" }                               # for address pattern
 tor-persist = { path = "../tor-persist", version = "0.5.1" }
-tor-proto = { path = "../tor-proto", version = "0.6.0" }
-tor-rtcompat = { path = "../tor-rtcompat", version = "0.6.0" }
+tor-proto = { path = "../tor-proto", version = "0.7.0" }
+tor-rtcompat = { path = "../tor-rtcompat", version = "0.7.0" }
 tor-units = { path = "../tor-units", version = "0.3.1" }
 tracing = "0.1.18"
 
 [dev-dependencies]
 float_eq = "1.0.0"
 tor-netdir = { path = "../tor-netdir", version = "0.6.0", features = ["testing"] }
-tor-netdoc = { path = "../tor-netdoc", version = "0.5.1" }
+tor-netdoc = { path = "../tor-netdoc", version = "0.5.2" }
 tor-persist = { path = "../tor-persist", version = "0.5.1", features = ["testing"] }
-tor-rtcompat = { path = "../tor-rtcompat", version = "0.6.0", features = ["tokio", "native-tls"] }
-tor-rtmock = { path = "../tor-rtmock", version = "0.5.0" }
+tor-rtcompat = { path = "../tor-rtcompat", version = "0.7.0", features = ["tokio", "native-tls"] }
+tor-rtmock = { path = "../tor-rtmock", version = "0.6.0" }
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
