--- a/crates/tor-cell/fuzz/Cargo.toml
+++ b/crates/tor-cell/fuzz/Cargo.toml
@@ -15,6 +15,7 @@ libfuzzer-sys = "0.4"
 
 [dependencies.tor-cell]
 path = ".."
+features = ["onion-service", "experimental"]
 
 [dependencies.tor-bytes]
 path = "../../tor-bytes"
